--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,11 @@ h3,h4{
 
 /* End Main Content */
 /* Content */
+.article h4 a{
+    font-size: 16px;
+    color: #1b1111;
+    font-weight: 500;
+}
 .article>.row>.col-lg-4{
     padding: 0!important;
     overflow: hidden;
@@ -100,6 +105,17 @@ h3,h4{
 .icon i{
     color:#717169;
     font-size: 12px;
+}
+.main-categories .card{
+    background:#cac9c9;
+    transition:0.2s;
+}
+.main-categories .card a{
+    font-size:16px;
+    color:#353434;
+}
+.main-categories .card:hover{
+    background:white;
 }
 /* End Content */
 /* Sidebar */
@@ -193,6 +209,12 @@ h3,h4{
     @media (min-width: 992px){
         .navbar-expand-lg .navbar-collapse{
             justify-content: space-between;
+        }
+        .col-lg-6.col-md-12.col-12{
+            padding:0;
+        }
+        .container{
+            padding: 0!important;
         }
     }
     /* End Navbar */
