--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,6 +172,12 @@ body{
     /* Navbar  */
     /* Reset css */
     @media (max-width: 575.98px){
+        .col-lg-8{
+            padding:0!important;
+        }
+        .col-lg-4{
+            padding:0!important;
+        }
         .col-lg-3.col-4{
             padding:0;
         }
