--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,15 @@
     margin:0;
     font-family: 'Roboto', sans-serif;
 }
+
+#hienthi i.fa.fa-search {
+    top: 28%;
+    right: 4%;
+    color: gray;
+    float: right;
+    margin-top: -26px;
+    padding-right: 14px;
+}
 h3,h4{
     font-size: 15px!important;
     margin: 0!important;
@@ -17,6 +26,11 @@ body{
 }
 .badge{
     font-size: 12px!important;
+}
+.page-item.active .page-link{
+    background-color:#18A2B8!important;
+    border-color:#18A2B8!important;
+    
 }
 /* End css */
 
@@ -46,6 +60,14 @@ body{
 }
 .search{
     position: relative;
+    width:330px;
+    margin-left:108px;
+}
+div#hienthi{
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    margin-top:9px;
 }
 .search button {
     position: absolute;
@@ -53,6 +75,41 @@ body{
     font-size: 17px;
     color: gray;
     cursor: pointer;
+}
+.search input{
+    width: 100%!important;
+}
+div#countryList{
+    position: absolute;
+    right:178px;
+    width: 416px;
+    top:55px;
+}
+div#countryList ul, #hienthi ul{
+    height:auto;
+    width:100%;
+    padding:0;
+    margin-top: 0;
+    border-radius: 4px;
+}
+div#countryList ul li, #hienthi ul li{
+    
+    border-bottom:1px solid #e0d5d5;
+    width: 100%;
+    height: 55px;
+    line-height: 55px;
+}
+div#countryList ul li a,  #hienthi ul li a{
+    color:#212529;
+    display: block;
+    padding-left:10px;
+    text-decoration: none;
+}
+div#countryList ul li:hover a{
+    background:#e0efff;
+}
+#hienthi ul li:hover a{
+    background:#e0efff;
 }
 /* Css of Top Menu */
 
@@ -133,8 +190,8 @@ body{
 .main-categories .card:hover{
     background:white;
 }
-.related h5{
-    font-size:16px;
+.related h5,p{
+    font-size:14px;
 }
 .related .col-sm-12.col-lg-4{
     padding:0;
@@ -155,11 +212,12 @@ body{
 }
 .categories ul li a{
     padding:0;
-    transition: 0.4s;
+    transition: 0.3s;
     color:#333;
+    font-size: 13px;
 }
 .categories ul li:hover a{
-    transform: translateX(20px);
+    transform: translateX(13px);
 }
 .categories ul li:hover{
     background-color: rgba(0,0,0,.03);
@@ -177,6 +235,9 @@ body{
     /* Navbar  */
     /* Reset css */
     @media (max-width: 575.98px){
+        .col-lg-9.mb-2{
+            padding:0 9px;
+        }
         .card-body{
             padding:13px 7px!important;
         }
